--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -88,7 +88,7 @@
  -->				        </p:selectOneMenu>
 					
 						<p:commandButton value="Search" update=":frmMain"
-							action="#{reportsController.getPayerData()}" />
+							action="#{reportsController.filterReport()}" />
 						<br />
 						
 					</h:panelGrid>
