--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -26,7 +26,7 @@
 					<p:commandButton value="Create" update=":myForm"
 						action="#{transactionController.clearData()}"
 								oncomplete="PF('Dlg1').show();"
-								
+								style="float: right; margin-top: 25px;"
 								 />								
 					<br/>
 					
