--- a/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportTransaction.xhtml
@@ -35,7 +35,7 @@
 				        </p:selectCheckboxMenu>
 					
 						<p:commandButton value="Search" update=":frmMain"
-							action="#{reportsController.getData()}" />
+							action="#{reportsController.filterReport()}" />
 						<br />
 						
 					</h:panelGrid>
