Reports fixed and refactored

--- a/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
+++ b/src/main/webapp/Views/Secured/Transaction/ViewTransaction.xhtml
@@ -31,7 +31,7 @@
 					<br/>
 					
 									<h:panelGrid columns="3">
-				<h:outputLabel for="payerMenu" value="Select payer:" />
+				<h:outputLabel for="payerMenu" value="Filter:" />
 				<p:selectCheckboxMenu id="payerMenu" label="Select payer" 
 				value="#{transactionController.payerFilter}"
 				 converter="javax.faces.Integer"
