Seatching functionality is added to reports section and provider payer . Also 2 documents added for provider

--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -35,7 +35,7 @@
     
 				    <p:dataTable value="#{payerController.payers}" var="payer" >
 
-						<p:column headerText="Payer Name">
+						<p:column headerText="Payer Name" filterMatchMode="contains" filterBy="#{payer.name}">
 							#{payer.name}
 						</p:column>
 
