FileLimit is updated to 5 mb

--- a/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
+++ b/src/main/webapp/Views/Secured/Provider/ProviderView.xhtml
@@ -210,7 +210,7 @@
 									<p:fileUpload value="#{docCell.document.orignalName}"
 										fileUploadListener="#{providerController.handleFileUpload}"
 										mode="advanced" dragDropSupport="false" fileLimit="3"
-										sizeLimit="500000" allowTypes="/(\.|\/)(pdf|doc?x|png|txt)$/"
+										sizeLimit="5242880" allowTypes="/(\.|\/)(pdf|doc?x|png|txt)$/"
 										update=":myForm" label="Browse..." 
 										>
 
